--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>bienvenu</h1>
-	<p>c'est une page normale basic et videeeee!!!</p>
+	<p>c'est une page anormale basic et videeeee!!!</p>
 
 </body>
 </html>
